src/objects/Produkt_Prvku__c.object
<CustomObject>
    <fields>
        <fullName>Mnozstvo__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Množstvo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductImage__c</fullName>
        <formula>Product__r.Product_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Produkty Prvku</relationshipLabel>
        <relationshipName>Produkty_Prvku</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prvok__c</fullName>
        <label>Prvok</label>
        <referenceTo>Prvok__c</referenceTo>
        <relationshipLabel>Produkty Prvku</relationshipLabel>
        <relationshipName>Produkty_Prvku</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Uroven__c</fullName>
        <label>Úroveň</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Štandard</fullName>
                </value>
                <value>
                    <fullName>Nadštandard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vybrany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vybraný</label>
        <type>Checkbox</type>
    </fields>
    <label>Produkt Prvku</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Produkt Prvku Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produkty Prvku</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>